1.16-3.0.12:
- Fixed a problem with shapecards becoming somewhat inconsistant if they are upgraded in the middle of selecting an area using the two corner points

1.16-3.0.11:
- Fixed crashes with the Builder in combination with liquids

1.16-3.0.10:
- Fixed the shield. All render modes were broken

1.16-3.0.9:
- Safety fix for the builder so that it will no longer crash on blocks that do weird things (like the banner). Mining a banner caused a crash on servers

1.16-3.0.8:
- The shield projector is now infusable again
- When the shield projector is upgraded it will keep the current settings

1.16-3.0.7:
- Fixed the lockup that happened when someone tried to open the shapecard gui from within the Builder gui. Also closing the shapecard gui will now reopen the Builder gui

1.16-3.0.6:
- Fixed the shield projector no longer accepting power

1.16-3.0.5:
- Update to latest McJtyLib

1.16-3.0.4-beta:
- Update to latest McJtyLib

3.0.3-beta:
- Fixed a problem on servers

3.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

3.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

3.0.0-beta:
- First port to 1.16.2

2.1.6:
- Fixed a potential exploit which could be used to attack a server

2.1.5-beta:
- Update for latest McJtyLib

2.1.4-beta:
- Update for latest McJtyLib

2.1.3-beta:
- Fixed the builder so it no longer voids items if there are no suitable storages

2.1.2-beta:
- The Builder can build in water again
- Fixed a problem with the energy level not showing in the shield projector GUI (it worked fine, it just didn't show)
- Fixed a potential crash with the shape card gui when it is openened from the Builder
- The shield will now also consider dolphins, bees, squids, and other neutral creatures as passive
- Some small protection fix