@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed the shield template recipe. It only gave one template per craft
+
 1.16-3.0.12:
 - Fixed a problem with shapecards becoming somewhat inconsistant if they are upgraded in the middle of selecting an area using the two corner points
 
